--- a/Input Data/Climate_Scenario_Generation_rev4.ipynb
+++ b/Input Data/Climate_Scenario_Generation_rev4.ipynb
@@ -540,7 +540,7 @@
     {
       "cell_type": "code",
       "source": [
-        "CNRM_45_daily_irrad_scenario, CNRM_45_daily_irrad_prob_norm = generate_solar_irradiance_scenarios(CNRM_45,10)"
+        "CNRM_45_daily_irrad_scenario, CNRM_45_daily_irrad_prob_norm = generate_solar_irradiance_scenarios(CNRM_45,N)"
       ],
       "metadata": {
         "id": "6OCfQh3_mme3"
